force-app/main/default/objects/Case_Time_Entry__c/Case_Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Object to handle individual time cards for a single case working session.</description>
    <label>Case Time Entry</label>
    <nameField>
        <label>Case Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>