force-app/main/default/objects/Case_Time_Entry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description of the work done during this time.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>