force-app/main/default/objects/Case_Time_Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Time the rep finished working on the ticket.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>