force-app/main/default/objects/Case_Time_Entry__c/fields/Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the effort on the case.</description>
    <label>Incurred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>