force-app/main/default/objects/Case_Time_Entry__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <formula>IF(BLANKVALUE(Override_Minutes__c,0)=0, (FLOOR((End_Time__c - Start_Time__c)*24*60)), Override_Minutes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>