force-app/main/default/objects/Case_Time_Entry__c/fields/Override_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Override_Minutes__c</fullName>
    <description>Option to override the calculated total of minutes.</description>
    <label>Override Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>