force-app/main/default/objects/Case_Time_Entry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Time the rep began working on the ticket.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>